--- a/news.html
+++ b/news.html
@@ -9,7 +9,10 @@
 	<script src="js/jquery.tools.min.js"></script>
 	<script src="js/jquery.li-scroller.1.0.js"></script>
 	<script src="js/common.js"></script>
-	<!--<script src="//vk.com/js/api/openapi.js?60"></script>-->
+	<!--[if lt IE 9]> 
+   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
+ 	<![endif]-->
+	<script src="//vk.com/js/api/openapi.js?60"></script>
 </head>
 <body>
 <!-- Facebook -->
@@ -25,14 +28,14 @@
 <div class="header-out">
 	<div class="container">
 		<div class="header-banner"></div>			
-		<div class="header">
+		<header class="header">
 			<h1 class="logo">
 				<a href="#">Teleus<i></i></a>
 			</h1>		
 			<div class="logo-txt">
 				Всё о ловушках операторов
 			</div>
-			<div class="nav">
+			<nav class="nav">
 				<ul>
 					<li><a href="#">Новости</a></li>
 					<li><a href="#">Статьи</a></li>					
@@ -48,8 +51,8 @@
 						<a href="#">Usernameverylongveryvery</a><i></i><em></em>
 					</li>			
 				</ul>
-			</div>
-		</div>		
+			</nav>
+		</header>		
 	</div>
 </div>
 <!-- END .header -->
@@ -78,9 +81,9 @@
 <!-- BEGIN .content -->
 <div class="container">
 	<div class="cols">
-		<div class="col-4">
+		<section class="col-4">
 			<h2 class="h2">Новости</h2>
-			<div class="block">
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -89,8 +92,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -99,8 +102,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -109,8 +112,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -119,8 +122,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<span>28 февраля</span>
@@ -128,18 +131,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
-				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
-				<div class="block__desc">
-					<a href="#"><img src="img/pic1.jpg" alt=""></a>
-					<span>28 февраля</span>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
-					<a class="comm" href="#">345 комментариев<i></i></a>
-				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -148,8 +141,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -158,8 +151,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<a href="#"><img src="img/pic1.jpg" alt=""></a>
@@ -168,8 +161,18 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
+				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
+				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
+					<span>28 февраля</span>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
+					<a class="comm" href="#">345 комментариев<i></i></a>
+				</div>	
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<span>28 февраля</span>
@@ -177,7 +180,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
+			</article>
 			<div class="pagination">
 				<p><b>Страницы</b><span>Показаны новости з 10 по 30 из 2030</span></p>
 				<div class="pagination__list">
@@ -195,10 +198,10 @@
 					<button class="pagination__next"><i class="pagination__next-r"></i></button>
 				</div>
 			</div>
-		</div>
-		<div class="col-5">
+		</section>
+		<aside class="col-5">
 			<h2 class="h2">Статьи</h2>
-			<div class="block">
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
@@ -206,8 +209,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
@@ -215,8 +218,8 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
-			<div class="block">
+			</article>
+			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
@@ -224,7 +227,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
+			</article>
 			<div class="tabs tabs_sidebar">
 				<div class="tabs__shadow"></div>
 				<ul class="tabs__link tabs__link_all">
@@ -253,12 +256,12 @@
 				</ul>
 			</div>
 			<div class="banner"></div>
-		</div>
+		</aside>
 	</div>
 </div>
 <!-- END .content -->
 <!-- BEGIN .footer -->
-<div class="footer">
+<footer class="footer">
 	<div class="container">
 		<div class="footer__info">
 			<div class="footer__logo"></div>
@@ -293,7 +296,7 @@
 			<div id="vk_groups"></div>
 		</div>
 	</div>		
-</div>
+</footer>
 <!-- END .footer -->
 <!-- BEGIN .popups -->
 <div class="popup-bg"></div>
