--- a/stat.html
+++ b/stat.html
@@ -11,7 +11,10 @@
 	<script src="js/jHtmlArea-0.7.5.min.js"></script>
 	<script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>	
 	<script src="js/common.js"></script>
-	<!--<script src="//vk.com/js/api/openapi.js?60"></script>-->
+	<!--[if lt IE 9]> 
+   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
+ 	<![endif]-->
+	<script src="//vk.com/js/api/openapi.js?60"></script>
 </head>
 <body class="no-space">
 <!-- Facebook -->
@@ -27,14 +30,14 @@
 <div class="header-out">
 	<div class="container">
 		<div class="header-banner"></div>			
-		<div class="header">
+		<header class="header">
 			<h1 class="logo">
 				<a href="#">Teleus<i></i></a>
 			</h1>		
 			<div class="logo-txt">
 				Всё о ловушках операторов
 			</div>
-			<div class="nav">
+			<nav class="nav">
 				<ul>
 					<li><a href="#">Новости</a></li>
 					<li><a href="#">Статьи</a></li>					
@@ -54,8 +57,8 @@
 						</a>
 					</li>			
 				</ul>
-			</div>
-		</div>		
+			</nav>
+		</header>		
 	</div>
 </div>
 <!-- END .header -->
@@ -84,7 +87,7 @@
 <!-- BEGIN .content -->
 <div class="container">
 	<div class="cols">
-		<div class="col-4">			
+		<section class="col-4">			
 			<div class="article">
 				<h2 class="h2">Можно проводить оплату товаров и услуг счйтом мобильного телефона</h2>
 				<div class="article__date">
@@ -173,6 +176,7 @@
 					<div class="add-comm__txt">
 						<textarea></textarea>
 					</div>
+					<div class="clr"></div>
 					<div class="add-comm__btn">
 						<input type="submit" class="btn complaint" value="Отправить">
 						<p>От <a class="user" href="#">Username<i></i></a></p>
@@ -220,8 +224,8 @@
 					<button class="pagination__next"><i class="pagination__next-r"></i></button>
 				</div>
 			</div>
-		</div>
-		<div class="col-5">
+		</section>
+		<aside class="col-5">
 			<h2 class="h2">Статьи</h2>
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
@@ -322,12 +326,12 @@
 					</li>
 				</ul>
 			</div>						
-		</div>
+		</aside>
 	</div>
 </div>
 <!-- END .content -->
 <!-- BEGIN .footer -->
-<div class="footer">
+<footer class="footer">
 	<div class="container">
 		<div class="footer__info">
 			<div class="footer__logo"></div>
@@ -362,7 +366,7 @@
 			<div id="vk_groups"></div>			
 		</div>
 	</div>		
-</div>
+</footer>
 <!-- END .footer -->
 <!-- BEGIN .popups -->
 <div class="popup-bg"></div>
