articles with pictures

--- a/news.html
+++ b/news.html
@@ -204,6 +204,7 @@
 			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
@@ -213,6 +214,7 @@
 			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
@@ -222,6 +224,7 @@
 			<article class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
