--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 				<div class="block">
 					<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 					<div class="block__desc">
+						<a href="#"><img src="img/pic1.jpg" alt=""></a>
 						<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut consectetur adipisicing labore et dolore magna aliqua consectetur adipisicing.</p>
