--- a/stat.html
+++ b/stat.html
@@ -230,6 +230,7 @@
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
@@ -239,6 +240,7 @@
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
@@ -248,6 +250,7 @@
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
+					<a href="#"><img src="img/pic1.jpg" alt=""></a>
 					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
