--- a/stat.html
+++ b/stat.html
@@ -11,6 +11,7 @@
 	<script src="js/jquery.li-scroller.1.0.js"></script>
 	<script src="js/jHtmlArea-0.7.5.min.js"></script>
 	<script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>	
+	<script src="js/jquery-ui-1.9.1.custom.min.js"></script>		
 	<script src="js/common.js"></script>
 	<!--[if lt IE 9]> 
    	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
@@ -257,7 +258,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
 				</div>	
-			</div>
+			</div>			
 			<div class="tabs tabs_sidebar">
 				<div class="tabs__shadow"></div>
 				<ul class="tabs__link tabs__link_all">
@@ -286,6 +287,7 @@
 				</ul>
 			</div>
 			<div class="banner"></div>
+			<h3 class="h3">Абоненты</h3>
 			<div class="tabs">
 				<div class="tabs__shadow"></div>
 				<ul class="tabs__link tabs__link_sb">
@@ -329,7 +331,11 @@
 						</div>
 					</li>
 				</ul>
-			</div>						
+			</div>	
+			<h3 class="h3">Календар</h3>	
+			<div class="calendar">
+				
+			</div>				
 		</aside>
 	</div>
 </div>
