--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<em class="nav__divider-r"></em>
 					</li>
 					<li class="nav__user-log">
-						<a href="#">Usernameverylongveryvery</a><i></i><em></em>
+						<a href="#"><i></i><i class="over"></i> Usernameverylongveryvery</a><em></em>
 					</li>			
 				</ul>
 			</nav>
